[package]
name = "tree-sitter-clojure"
description = "Clojure Tree-sitter grammar"
keywords = ["incremental", "parsing", "clojure", "tree-sitter"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/jerielverissimo/tree-sitter-clojure"
version = "0.1.0"
edition = "2024"
license = "MIT"

[build-dependencies]
cc = "1.0"

[dependencies]
tree-sitter = "0.25.6"
tree-sitter-language = "0.1.5"
